@@ -1,5 +1,15 @@
 2012-12-29 Paulo Andrade <pcpa@gnu.org>
 
+	* lib/lightning.c: Correct both, wrong and confusing logic
+	to compute the reverse of a jump. Now it properly matches
+	C semantics for "eq" (==) and "ne" (!=) and correct computation
+	of reverse of "uneq" as "gt".
+
+	* check/branch.tst: Update "ne" float branch check that
+	previously happened to be wrongly tested with a NaN argument.
+
+2012-12-29 Paulo Andrade <pcpa@gnu.org>
+
 	* check/float.ok, check/float.tst: New test cases implementing
 	extensive validation of float comparison and branch code
 	generation as well as integer conversion, involving NaN and
